# holdem-lab

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
analysis/: README.md
design/: game.pen  memo
design/tool/: equity-calculator.md  equity-calculator.pen
docs/: DEVELOPMENT.md
fixtures/hands/: fixed_hands.json
holdem-core/: README.md  pyproject.toml
holdem-core/analysis/: 00_smoke_tests.ipynb  01_equity_preflop.ipynb  02_equity_postflop.ipynb  03_replay_viewer.ipynb  04_draws_and_canonize.ipynb  100_glossary.ipynb  101_rules.ipynb
holdem-core/scripts/: generate_preflop_equity.py
holdem-core/src/holdem_lab/: __init__.py  canonize.py  cards.py  draws.py  equity.py  evaluator.py  event_log.py  game_state.py
holdem-core/tests/: __init__.py  test_canonize.py  test_cards.py  test_draws.py  test_equity.py  test_evaluator.py  test_event_log.py  test_game_state.py
rust/holdem-app/: package-lock.json  package.json
rust/holdem-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/holdem-app/src-tauri/scripts/: generate_icons.py
rust/holdem-app/src-tauri/src/: commands.rs  main.rs
rust/holdem-core/: Cargo.toml
rust/holdem-core/src/: canonize.rs  card.rs  draws.rs  equity.rs  error.rs  evaluator.rs  lib.rs  range.rs
rust/holdem-wasm/: Cargo.toml
rust/holdem-wasm/src/: lib.rs  types.rs  utils.rs
web/: .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
web/backend/: Dockerfile  pyproject.toml  run.py
web/backend/app/: __init__.py  config.py  main.py
web/backend/app/api/routes/: cards.py  draws.py  equity.py  evaluate.py  health.py
web/backend/app/schemas/: __init__.py  card.py  draws.py  equity.py  evaluate.py
web/backend/app/services/: holdem.py
web/backend/tests/: __init__.py  test_cards.py  test_draws.py  test_equity.py  test_health.py
web/frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/frontend/src/: App.tsx  main.tsx  wasm.d.ts
web/frontend/src/api/: client.ts  tauri.ts  types.ts  vision-types.ts  vision.ts  wasm.ts
web/frontend/src/components/camera/: CameraButton.tsx  CameraDialog.tsx  index.ts
web/frontend/src/components/cards/: BoardInput.tsx  Card.tsx  CardPicker.tsx  CardPickerDialog.tsx  index.ts
web/frontend/src/components/evaluator/: HandEvaluator.tsx
web/frontend/src/components/layout/: LanguageSwitcher.tsx  SettingsDialog.tsx  TabNav.tsx  index.ts
web/frontend/src/components/matrix/: HandMatrix.tsx  index.ts
web/frontend/src/components/players/: PlayerRow.tsx  index.ts
web/frontend/src/components/preflop/: ColorProfileEditor.tsx  PreflopMatrix.tsx  index.ts
web/frontend/src/components/results/: EquityBar.tsx  ResultTable.tsx  index.ts
web/frontend/src/data/: colorProfiles.ts  preflop-equity-10.json  preflop-equity-2.json  preflop-equity-3.json  preflop-equity-4.json  preflop-equity-5.json  preflop-equity-6.json  preflop-equity-7.json  preflop-equity-8.json  preflop-equity-9.json  preflop-equity.json
web/frontend/src/hooks/: useCardRecognition.ts
web/frontend/src/i18n/: index.ts
web/frontend/src/i18n/locales/: en.json  zh-CN.json
web/frontend/src/store/: index.ts
web/frontend/src/styles/: globals.css
web/frontend/src/utils/: storage.ts
