[package]
name = "holdem-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Texas Hold'em poker equity calculator and hand evaluator"
license = "MIT"
repository = "https://github.com/example/holdem-lab"
keywords = ["poker", "holdem", "equity", "evaluator"]
categories = ["games", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
itertools = "0.14"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

# TODO: 添加 benchmark 后启用
# [[bench]]
# name = "benchmarks"
# harness = false

[features]
default = []
# TODO: 后续优化
# parallel = ["rayon"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
