[package]
name = "holdem-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Texas Hold'em poker equity calculator and hand evaluator"
license = "MIT"
repository = "https://github.com/example/holdem-lab"
keywords = ["poker", "holdem", "equity", "evaluator"]
categories = ["games", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
itertools = "0.14"
thiserror = "2.0"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["parallel"]
parallel = ["rayon"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
