[package]
name = "holdem-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "WebAssembly bindings for holdem-core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
holdem-core = { path = "../holdem-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
