[package]
name = "holdem-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Texas Hold'em Equity Calculator Desktop App"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
holdem-core = { path = "../../holdem-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
